addons/website/static/src/snippets/s_embed_code/000.scss
.editor_enable .s_embed_code {
    min-height: $o-font-size-base;
}

.s_embed_code .s_embed_code_embedded .bg-light.o_default_snippet_text {
    background-color: lightcyan !important;
    color: black;
}

